--- a/app/views/ml/lists/index.html.haml
+++ b/app/views/ml/lists/index.html.haml
@@ -9,7 +9,6 @@
       %th Aliases
       %th Diffusion policy
       %th Inscription policy
-      %th Is public
       %th Messsage header
       %th Message footer
       %th Is archived
@@ -31,8 +30,7 @@
         %td= ml_list.description
         %td= ml_list.aliases
         %td= ml_list.diffusion_policy
-        %td= ml_list.inscription_policy_id
-        %td= ml_list.is_public
+        %td= ml_list.inscription_policy
         %td= ml_list.messsage_header
         %td= ml_list.message_footer
         %td= ml_list.is_archived
