--- a/app/views/shared/_ml_list.html.haml
+++ b/app/views/shared/_ml_list.html.haml
@@ -1,13 +1,13 @@
 -lists.each do |l|
   %li
     =link_to ml_list_path(l) do
-      =l.name
+      %b=l.name
       =l.email
     (#{l.users.count} membres)
     %span.fr
       -if l.users.include?(user)
-        = link_to ml_list_leave_path(l.id, user.id), title: 'Quitter la liste', rel: 'tooltip', :remote=>true do
-          Quiter
+        = link_to ml_list_leave_path(l.id, user.id), title: 'Me desinscire de la liste', rel: 'tooltip', :remote=>true do
+          Me desinscrire
       -else
-        = link_to ml_list_join_path(l.id, user.id), title: 'Rejoindre la liste', rel: 'tooltip', :remote=>true do
-          Rejoindre
+        = link_to ml_list_join_path(l.id, user.id), title: "M'inscrire à la liste", rel: 'tooltip', :remote=>true do
+          M'inscrire
