--- a/app/views/email_validation_mailer/confirm_email.html.haml
+++ b/app/views/email_validation_mailer/confirm_email.html.haml
@@ -12,10 +12,14 @@
         =link_to "Activer la redirection sur cette adresse", @confirmation_url ,:class => "bouton bouton_orange_1 txtcenter"
 
       %p
-        Tu pourras modifier par la suite tes redirections et inscription au listes de diffusion sur
+        Tu pourras modifier par la suite tes redirections et inscriptions aux listes de diffusion sur
         =link_to Configurable[:site_url], Configurable[:site_url]
 
-      %p Si ce lien ne fonctionne pas, copie l'URL #{@confirmation_url}, puis colle-la dans une nouvelle fenêtre de navigateur. Si tu as reçu ce message par erreur, ou si tu n'as pas formulé de demande en ce sens, aucune action supplémentaire de ta part n'est requise. Par conséquent, tu peux ignorer ce message.
+      %p
+        Si ce lien ne fonctionne pas, copie l'URL suivante puis colle-la dans une nouvelle fenêtre de navigateur.
+        %br#{@confirmation_url}
+      %p
+        Si tu as reçu ce message par erreur, ou si tu n'as pas formulé de demande en ce sens, aucune action supplémentaire de ta part n'est requise. Par conséquent, tu peux ignorer ce message.
 
       %p
         Fratern's
