--- a/app/assets/stylesheets/mail.css.scss
+++ b/app/assets/stylesheets/mail.css.scss
@@ -20,6 +20,10 @@ body, button, input, select, textarea {
     line-height: 1.5;
 }
 
+.small{
+  font-size: 12px;
+}
+
 a.bouton_bleu {
     background-color: #14BFCC;
 }
