remove ability to delete last active ERA if enabled + add error messages

--- a/app/views/shared/_er_list.html.haml
+++ b/app/views/shared/_er_list.html.haml
@@ -5,6 +5,10 @@
       Avec un compte Google Apps, j'accède aux mails de la communauté en toute simplicité!
 
       .mts= link_to ' Créer mon compte Google Apps ', create_google_apps_user_path(@user), method: :get,:remote=>true,  :class =>"bouton bouton_bleu"
+  -if @emails_redirect.select{|e| e.active?}.count == 0
+    %div.bg-red
+      .pam
+        Attention ! Tu dois activer une des adresses ci-dessous ou créer un compte Google Gadz.org pour recevoir les mail envoyés à ton adresse gadz.org,
 - @emails_redirect.each do |e|
   -if e.type_redir == "googleapps"
     .pam.bg-blue-dark-2
@@ -47,4 +51,9 @@
         -if can? :destroy, e
           = link_to user_email_redirect_account_path(@user,e), method: :delete, :remote => true, confirm: true,  title: 'Supprimer cette adresse', rel: 'tooltip', data: {confirm: "Tu vas supprimer définitivement cette addresse, es-tu bien certain ? Tu pourras dans tous les cas la recréer plus tard si tu le souhaites."} do
             %i.zmdi.zmdi-delete.icon-padding-list
+
+      %span
+        -unless e.confirmed
+          %br/
+          .red Suis les instructions dans le mail envoyé à cette adresse pour la valider.
 
