--- a/app/views/users/dashboard.html.haml
+++ b/app/views/users/dashboard.html.haml
@@ -1,3 +1,5 @@
+-content_for :header do
+  =javascript_include_tag 'user/dashboard.js.erb'
 %section.pam
   %h1 Mes redirections email
   .grid-5-small-2
