--- a/app/views/shared/_ml_members.html.haml
+++ b/app/views/shared/_ml_members.html.haml
@@ -7,3 +7,18 @@
         -@members.each do |m|
           %li
             =m.primary_email
+
+.grid-2
+  .box.box-light.shadow-1.mtm.flex-item-double
+    .box-top.box-top-color.pam
+      Adresses externes
+    .box-bottom.email-list
+      %ul
+        -@external_emails.each do |m|
+          %li
+            =m.email
+            -if can? :destroy, m
+              %span.fr
+                =link_to m, :method => :delete, :data => { :confirm => 'Are you sure?' } do
+                  %i.zmdi.zmdi-delete.icon-padding-list
+
