--- a/app/views/ml/lists/show.html.haml
+++ b/app/views/ml/lists/show.html.haml
@@ -68,14 +68,28 @@
     = link_to 'Edit', edit_ml_list_path(@ml_list)
     = link_to 'Back', ml_lists_path
 
-  %div.pam
-    =form_tag  ml_list_add_email_path(@ml_list)   do
-      .fl.group.group-m-form
-        =email_field_tag :email
-        .span.highlight.w100
-        .span.bar.w100
-        =label_tag "email@domaine.fr"
-      .fr.plm.plr
-        =submit_tag '+ Ajouter',:class => "bouton bouton_bleu"
+    .grid-2
+      .box.box-light.shadow-1.mtm
+        .box-top.box-top-color.pam
+          Ajouter un membre
+        .box-bottom.pam
+          TODO
+
+      .box.box-light.shadow-1.mtm
+        .box-top.box-top-color.pam
+          Ajouter une adresse externe
+        .box-bottom.pam
+
+          %p Permet d'ajouter une adresse qui n'est pas liée à un compte externe. Si l'adresse est déjà une adresse de redirection, le compte associé sera rattaché et non pas l'adresse seule.
+
+          %div.pam
+            =form_tag  ml_list_add_email_path(@ml_list)   do
+              .fl.group.group-m-form
+                =email_field_tag :email
+                .span.highlight.w100
+                .span.bar.w100
+                =label_tag "email@domaine.fr"
+              .fr.plm.plr
+                =submit_tag '+ Ajouter',:class => "bouton bouton_bleu"
 
   =render partial: "shared/ml_members", locals: {members: @members, external_emails: @external_emails}
