--- a/app/views/shared/_er_list.html.haml
+++ b/app/views/shared/_er_list.html.haml
@@ -12,10 +12,16 @@
 - @emails_redirect.each do |e|
   -if e.type_redir == "googleapps"
     .pam.bg-blue-dark-2
-      %span
-        %i.zmdi.zmdi-google.icon-padding-list
-        Google Apps Gadz
-      %span.fr= link_to 'Connexion', "https://mail.google.com/a/gadz.org", :class =>"bouton-light"
+      -if e.confirmed
+        %span
+          %i.zmdi.zmdi-google.icon-padding-list
+          Google Apps Gadz
+        %span.fr= link_to 'Connexion', "https://mail.google.com/a/gadz.org", :class =>"bouton-light"
+      -else
+        %span
+          %i.zmdi.zmdi-google.icon-padding-list
+          Google Apps Gadz en cours de création...
+
 
   -else
     %li
