open google apps connexion in _blank

--- a/app/views/shared/_er_list.html.haml
+++ b/app/views/shared/_er_list.html.haml
@@ -16,7 +16,7 @@
         %span
           %i.zmdi.zmdi-google.icon-padding-list
           Google Apps Gadz
-        %span.fr= link_to 'Connexion', "https://mail.google.com/a/gadz.org", :class =>"bouton-light"
+        %span.fr= link_to 'Connexion', "https://mail.google.com/a/gadz.org", :class =>"bouton-light", :target => "_blank"
       -else
         %span
           %i.zmdi.zmdi-google.icon-padding-list
