--- a/app/views/ml/lists/show.html.haml
+++ b/app/views/ml/lists/show.html.haml
@@ -62,6 +62,10 @@
     %p
       %b Message max bytes size:
       = @ml_list.message_max_bytes_size
+    %p
+      %b Alias de redirection zenimel:
+      = @redirection_alias
+
 
 
 
