--- a/app/views/shared/_ml_members.html.haml
+++ b/app/views/shared/_ml_members.html.haml
@@ -7,6 +7,10 @@
         -@members.each do |m|
           %li
             =m.primary_email
+            -if can?( :suscribe, @ml_list) && can?( :read, m)
+              %span.fr
+                = link_to ml_list_leave_path(@ml_list.id, m.id) do
+                  %i.zmdi.zmdi-delete.icon-padding-list
 
 .grid-2
   .box.box-light.shadow-1.mtm.flex-item-double
