poc responsive menu

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -127,11 +127,14 @@ ul.userblock a{
 }
 body {
     /*background: #EEE none repeat scroll 0% 0%;*/
-    background: #f7f7f7;
     padding: 0px;
     margin: 0px;
 }
 
+.wrapper{
+  background: #f7f7f7;
+
+}
 
 /*-----------------------------sections-------------------------*/
 
