--- a/app/views/ml/lists/show.html.haml
+++ b/app/views/ml/lists/show.html.haml
@@ -22,8 +22,8 @@
     -case @ml_list.diffusion_policy
       -when "open"
         N'importe qui peut écrire sur cette liste
-      -when "cloed"
-        Seul les membres de la liste peuvent envoyer des messages
+      -when "closed"
+        Seul les membres de la liste peuvent envoyer des messages, les exterieurs sont modérés
       -when "moderated"
         Tous les messages envoyés à la liste son soumis à moderation
 
