--- a/app/views/ml/lists/show.html.haml
+++ b/app/views/ml/lists/show.html.haml
@@ -82,7 +82,7 @@
 
       .box.box-light.shadow-1.mtm
         .box-top.box-top-color.pam
-          Ajouter une adresse externe
+          Ajouter une adresse
         .box-bottom.pam
 
           %p
