--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -205,7 +205,7 @@ a:focus {
     border-top: 1px solid #ddd; 
 }
 
-
+.green {color: #27ae60}
 .red {color: #c0392b}
 .inactive {color: #AAA;}
 .bg-red { background-color: #c0392b; color: #fff}
