--- a/app/views/shared/_ml_list.html.haml
+++ b/app/views/shared/_ml_list.html.haml
@@ -1,13 +1,21 @@
 -lists.each do |l|
-  %li
-    =link_to ml_list_path(l) do
-      %b=l.name
-      =l.email
-    (#{l.users.count+l.ml_external_emails.count} membres)
-    %span.fr
-      -if l.users.include?(user)
-        = link_to ml_list_leave_path(l.id, user.id), title: 'Me desinscire de la liste', rel: 'tooltip', :remote=>true do
-          Me desinscrire
-      -else
-        = link_to ml_list_join_path(l.id, user.id), title: "M'inscrire à la liste", rel: 'tooltip', :remote=>true do
-          M'inscrire
+  .box.box-light.shadow-1.mtm.flex-item-double
+    .box-bottom.email-list
+      %ul
+        %li
+          =link_to ml_list_path(l) do
+            %b=l.name
+            =l.email
+            (#{l.users.count+l.ml_external_emails.count} membres)
+          %span.fr
+            -if l.users.include?(user)
+              = link_to ml_list_leave_path(l.id, user.id), title: 'Me desinscire de la liste', rel: 'tooltip', :remote=>true do
+                Me desinscrire
+                %i.zmdi.zmdi-minus-circle.icon-padding-list.red
+            -else
+              = link_to ml_list_join_path(l.id, user.id), title: "M'inscrire à la liste", rel: 'tooltip', :remote=>true do
+                M'inscrire
+                %i.zmdi.zmdi-plus-circle.icon-padding-list.green
+          %span
+            %br/
+            =l.description
