--- a/app/views/users/dashboard_ml.html.haml
+++ b/app/views/users/dashboard_ml.html.haml
@@ -1,20 +1,16 @@
 %section.pam
-  %h1 Mes listes de diffusion
-  .grid-2
-    .box.box-light.shadow-1.mtm.flex-item-double
-      .box-top.box-top-color.pam
+  .grid
+    %div.ptm
+      %h1
+        %i.zmdi.zmdi-comments.icon-padding-list
         Listes où je suis inscrit :
-      .box-bottom.email-list
-        %ul
-          #joined_lists
-            -if @lists_joined.present?
-              =render partial: "shared/ml_list", locals: {lists: @lists_joined, user: @user}
-
-    .box.box-light.shadow-1.mtm.flex-item-double
-      .box-top.box-top-color.pam
+      #joined_lists
+        -if @lists_joined.present?
+          =render partial: "shared/ml_list", locals: {lists: @lists_joined, user: @user}
+    %div.ptm.mtm
+      %h1
+        %i.zmdi.zmdi-comment-outline.icon-padding-list
         Autres listes :
-      .box-bottom.email-list
-        %ul
-          #not_joined_lists
-            -if @lists_not_joined.present?
-              =render partial: "shared/ml_list", locals: {lists: @lists_not_joined, user: @user}
+      #not_joined_lists
+        -if @lists_not_joined.present?
+          =render partial: "shared/ml_list", locals: {lists: @lists_not_joined, user: @user}
