--- a/app/views/shared/_ml_list.html.haml
+++ b/app/views/shared/_ml_list.html.haml
@@ -5,17 +5,24 @@
         %li
           =link_to ml_list_path(l) do
             %b=l.name
-            =l.email
-            (#{l.users.count+l.ml_external_emails.count} membres)
+
           %span.fr
-            -if l.users.include?(user)
+            -if already_joined
               = link_to ml_list_leave_path(l.id, user.id), title: 'Me desinscire de la liste', rel: 'tooltip', :remote=>true do
                 Me desinscrire
-                %i.zmdi.zmdi-minus-circle.icon-padding-list.red
+                %i.icon-padding-list
+                %i.zmdi.zmdi-account.red
+                %i.zmdi.zmdi-arrow-right.red
             -else
               = link_to ml_list_join_path(l.id, user.id), title: "M'inscrire à la liste", rel: 'tooltip', :remote=>true do
                 M'inscrire
-                %i.zmdi.zmdi-plus-circle.icon-padding-list.green
+                %i.icon-padding-list
+                %i.zmdi.zmdi-arrow-right.green
+                %i.zmdi.zmdi-account.green
           %span
             %br/
-            =l.description
+            .small
+              =l.email
+              =l.description
+              %span.fr
+                (#{l.members_count} membres)
