--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -24,6 +24,8 @@
           %td= user.hruid
           %td
             = link_to t('users.forms.buttons.show'), user
+            = link_to "Mails",dashboard_user_path(user)
+            = link_to "ML",dashboard_ml_user_path(user)
             -if can? :update, user
               = link_to t('users.forms.buttons.edit'), edit_user_path(user)
 
