--- a/app/views/users/dashboard_ml.html.haml
+++ b/app/views/users/dashboard_ml.html.haml
@@ -7,6 +7,8 @@
       #joined_lists
         -if @lists_joined.present?
           =render partial: "shared/ml_list", locals: {lists: @lists_joined, user: @user, already_joined: true}
+        -else
+          Tu n'es inscrit à aucune liste. Tu trouveras ci-dessous les listes auquelles tu peux t'inscrire.
     %div.ptm.mtm
       %h1
         %i.zmdi.zmdi-comment-outline.icon-padding-list
