change ML diff policy text

--- a/app/views/ml/lists/show.html.haml
+++ b/app/views/ml/lists/show.html.haml
@@ -23,7 +23,7 @@
       -when "open"
         N'importe qui peut écrire sur cette liste
       -when "closed"
-        Seul les membres de la liste peuvent envoyer des messages, les exterieurs sont modérés
+        Suel les membres de la liste peuvent envoyer librement des mails, les extérieurs sont refusés
       -when "moderated"
         Tous les messages envoyés à la liste son soumis à moderation
 
