--- a/app/assets/stylesheets/autoload/landing.css.scss
+++ b/app/assets/stylesheets/autoload/landing.css.scss
@@ -5,6 +5,7 @@
   background-position: center bottom;
   background-size: cover;
   color: rgb(255, 255, 255);
+  position: relative;
 }
 #big-bg2{
   background-color: #473625;
