--- a/app/views/static_pages/landing.html.haml
+++ b/app/views/static_pages/landing.html.haml
@@ -4,7 +4,12 @@
       =link_to root_path do
         =image_tag "logo_alumni_nb.png", :class => "vertical-center"
 
-    .txtcenter= link_to t('layout.menu.connect'), new_user_session_path, :class =>"bouton bouton_bleu vertical-center"
+      .txtcenter
+        %h1 Email gadz.org, Gadzmelv2, Imelavi, listes de diffusion.
+        Retrouve tous les services mails gadz.org dans un même endroit.
+
+  .skip-links.sup
+  .txtcenter.sup= link_to t('layout.menu.connect'), new_user_session_path, :class =>"bouton bouton_bleu vertical-center"
 
 .int.center.pal
   .grid-2
