--- a/app/views/users/dashboard_ml.html.haml
+++ b/app/views/users/dashboard_ml.html.haml
@@ -3,7 +3,7 @@
     %div.ptm
       %h1
         %i.zmdi.zmdi-comments.icon-padding-list
-        Listes où je suis inscrit :
+        Listes auxquelles je suis inscrit(e)g :
       #joined_lists
         -if @lists_joined.present?
           =render partial: "shared/ml_list", locals: {lists: @lists_joined, user: @user, already_joined: true}
