Add gogole analytics events on ml

--- a/app/views/shared/_ml_list.html.haml
+++ b/app/views/shared/_ml_list.html.haml
@@ -8,13 +8,13 @@
 
           %span.fr
             -if already_joined
-              = link_to ml_list_leave_path(l.id, user.id), title: 'Me desinscire de la liste', rel: 'tooltip', :remote=>true do
+              = link_to ml_list_leave_path(l.id, user.id), title: 'Me desinscire de la liste', rel: 'tooltip', :remote=>true, class: "unsubscribe_ml_button" do
                 Me desinscrire
                 %i.icon-padding-list
                 %i.zmdi.zmdi-account.red
                 %i.zmdi.zmdi-arrow-right.red
             -else
-              = link_to ml_list_join_path(l.id, user.id), title: "M'inscrire à la liste", rel: 'tooltip', :remote=>true do
+              = link_to ml_list_join_path(l.id, user.id), title: "M'inscrire à la liste", rel: 'tooltip', :remote=>true, class: "subscribe_ml_button" do
                 M'inscrire
                 %i.icon-padding-list
                 %i.zmdi.zmdi-arrow-right.green
