--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -211,7 +211,7 @@ a:focus {
 .bg-red { background-color: #c0392b; color: #fff}
 
 .bg-blue { background-color: #14BFCC}
-.bg-blue-dark-2 { background-color: #017782; color: #fff;}
+.bg-blue-dark-2, .bg-blue-dark-2:hover { background-color: #017782; color: #fff;}
 .bg-blue-dark-1 { background-color: #01B0C0; color: #fff;}
 .bg-blue-light-1 { background-color: #63D4DE; color: #fff;}
 
@@ -332,7 +332,7 @@ a:focus {
 .email-list li:hover{
     background-color: #eee;
 }
-.email-list li *{text-decoration: none;}
+.email-list *{text-decoration: none;}
 
 
 li{
