--- a/app/views/layouts/_menu.html.haml
+++ b/app/views/layouts/_menu.html.haml
@@ -16,8 +16,14 @@
         .menu-item>
           =link_to "Listes de diffusions", mailinglists_path, class: "menu-a"
         - if user_signed_in?
-          .menu-item>
-            =link_to "Administration", admin_path, class: "menu-a"
+          - if can? :read, :admin
+            .menu-item>
+              =form_tag  search_by_id_users_path,:method => :get, :user_id => :id_element do
+                =autocomplete_field_tag 'Hruid', '', autocomplete_user_hruid_users_path, :size => 10, :id_element => '#id', :placeholder => "nom.prenom.année"
+                =hidden_field_tag "id"
+                =submit_tag 'GO!', :class => ""
+            .menu-item>
+              =link_to "Administration", admin_path, class: "menu-a"
           = render 'layouts/user_widget'
 
 
