--- a/app/views/shared/_ml_list.html.haml
+++ b/app/views/shared/_ml_list.html.haml
@@ -1,6 +1,6 @@
 -lists.each do |l|
-  .box.box-light.shadow-1.mtm.flex-item-double
-    .box-bottom.email-list
+  .box.box-light.shadow-1.mts.flex-item-double
+    .box-bottom.ml-list
       %ul
         %li
           =link_to ml_list_path(l) do
