--- a/app/views/shared/_ml_members.html.haml
+++ b/app/views/shared/_ml_members.html.haml
@@ -2,7 +2,7 @@
   .box.box-light.shadow-1.mtm.flex-item-double
     .box-top.box-top-color.pam
       Membres
-    .box-bottom.email-list
+    .box-bottom.ml-list
       %ul
         -if @members.count == 0
           %li
@@ -21,7 +21,7 @@
   .box.box-light.shadow-1.mtm.flex-item-double
     .box-top.box-top-color.pam
       Membre sans adresses gadz.org
-    .box-bottom.email-list
+    .box-bottom.ml-list
       %ul
         -if @external_emails.count == 0
           %li
