--- a/app/views/users/dashboard.html.haml
+++ b/app/views/users/dashboard.html.haml
@@ -24,7 +24,7 @@
 
 
     .ma1.small-hidden
-      .txtcenter.vertical-center
+      .txtcenter.vertical-center.horizontal-center
         %i.zmdi.zmdi-long-arrow-right#big-arrow
 
     .box.box-light.shadow-1.mtm.mbm.flex-item-double
