--- a/app/views/layouts/_menu.html.haml
+++ b/app/views/layouts/_menu.html.haml
@@ -4,7 +4,7 @@
     #navigation
       #logo
         =link_to root_path do
-          =image_tag "logo_alumni.png", :class => "vertical-center"
+          =image_tag "logo_alumni.png"
       #menu-button
         .menu-item>
           =link_to "#" do
