--- a/app/views/ml/lists/index.html.haml
+++ b/app/views/ml/lists/index.html.haml
@@ -1,5 +1,6 @@
 %h1 Listing ml_lists
-
+=form_tag ml_lists_path(), :method => :get ,class: "mtm"do
+  =text_field_tag :search, params[:search], :placeholder => "Recherche par email", :class => "w100 login", :autofocus => true
 %table
   %thead
     %tr
@@ -7,23 +8,22 @@
       %th Email
       %th Description
       %th Aliases
-      %th Diffusion policy
-      %th Inscription policy
-      %th Is archived
+      %th Diffusion
+      %th Inscription
+      -#%th Is archived
       %th
 
   %tbody
     - @ml_lists.each do |ml_list|
       %tr
-        %td= ml_list.name
+        %td=link_to ml_list.name, ml_list
         %td= ml_list.email
         %td= ml_list.description
         %td= ml_list.aliases
         %td= ml_list.diffusion_policy
         %td= ml_list.inscription_policy
-        %td= ml_list.is_archived
+        -#%td= ml_list.is_archived
         %td
-          =link_to 'Show', ml_list
           =link_to 'Edit', edit_ml_list_path(ml_list)
           =link_to 'Destroy', ml_list, :method => :delete, :data => { :confirm => 'Are you sure?' }
 
